fix invisible text on active buttons

--- a/aleph_modules/core/style.css
+++ b/aleph_modules/core/style.css
@@ -71,7 +71,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .active {
 	background-color: #757d80;
-	color: #737d80;
+	color: #060b0d;
 }
 
 .active:hover {
